# cabal-delete

./: .gitignore  LICENSE  README  README.rst  cabal-delete.cabal
src/: CabalDelete.hs  Main.hs
src/CabalDelete/: Command.hs  GhcPkg.hs  Parse.hs  ReverseDepends.hs  Types.hs  Utils.hs
