name:                cabal-delete
version:             0.4.0.0
synopsis:            Command line tool to delete cabal library packages

description:         cabal-delete deletes installed directories of
                     the specified package and unregisters it if it has
                     no reverse dependency and it is not installed with ghc.
                     It cannot delete executable packages.

                     cabal-delete also has some utility commands to show
                     package info, list packages multiple version installed,
                     and list packages with no reverse dependency.

license:             MIT
license-file:        LICENSE
author:              Iku Iwasa
maintainer:          iku.iwasa@gmail.com
stability:           Experimental
category:            Distribution
build-type:          Simple
cabal-version:       >= 1.6
extra-source-files:  README.rst

source-repository head
    type: git
    location: git://github.com/iquiw/cabal-delete.git

executable cabal-delete
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:
    base >= 4.2 && < 5,
    bytestring,
    Cabal >= 1.6 && < 1.15,
    containers,
    directory,
    filepath,
    process,
    attoparsec >= 0.10.0.0,
    ghc-paths,
    transformers >= 0.2 && < 0.4
  ghc-options:        -Wall
  other-modules:
    CabalDelete
    CabalDelete.Types,
    CabalDelete.Parse,
    CabalDelete.GhcPkg,
    CabalDelete.ReverseDepends,
    CabalDelete.Command,
    CabalDelete.Utils
